objects/Portal__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_city__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Client city</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_street__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Client street</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Emirates</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Uk</fullName>
                </value>
                <value>
                    <fullName>Us</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Portal_name__c</fullName>
        <label>Portal name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>KA</fullName>
                </value>
                <value>
                    <fullName>Mh</fullName>
                </value>
                <value>
                    <fullName>MP</fullName>
                </value>
                <value>
                    <fullName>Tl</fullName>
                </value>
                <value>
                    <fullName>UP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zip_code__c</fullName>
        <label>Zip code</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Portal</label>
    <nameField>
        <label>Portal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>